Wire existing views to the new component system, fix css, fix animations, make full height on mobile, new close button on mobile

--- a/theme/themes/pastanaga/extras/toolbar.less
+++ b/theme/themes/pastanaga/extras/toolbar.less
@@ -412,6 +412,7 @@ svg.icon {
 // Personal Tools
 .pastanaga-menu {
   width: 100vw;
+  height: calc(100vh - 100px);
 
   header {
     display: flex;
@@ -445,6 +446,7 @@ svg.icon {
 
   @media only screen and (min-width: @largestMobileScreen) {
     width: 320px;
+    height: auto;
   }
 }
 
